# ReGNN

./: .gitignore  BATCH_SIZE_SCHEDULING.md  Dockerfile  PERGROUP_SCHEDULERS.md  README.md  fast_encoding_example.py  hyperparameter_search.py  pyproject.toml  requirements.in  requirements.txt  run_all_analysis.py  run_all_analysis_nohealth.py  setup.py
mihm/: config.py
mihm/data/: dataset.py  process.py  trainutils.py
mihm/hyperparam/: constants.py  eval.py  hyperparam_search.py  preprocess.py  train.py
mihm/model/: bayes_mihm.py  custom_loss.py  mihm.py  mihm_dataset.py  modelutils.py
notebooks/: CognitionAirPollutionExample.ipynb  Feb14_2024_BNN.ipynb  Feb14_2024_BNN_pm25.ipynb  Feb14_train_mihm_mutual_info.ipynb  Feb23_2024_BNN_Heat.ipynb  Feb23_2024_Heat_MLP.ipynb  Feb28_2024_raytune.ipynb  Feb2_v2_shapley_value_analysis_heat_ordinal.ipynb  Feb2_v2_shapley_value_analysis_pm25_ordinal.ipynb  Feb4_shapley_value_analysis_heat_pca.ipynb  Feb4_train_mihm_heat_twin_equation.ipynb  Feb6_FAMD_reduction.ipynb  Feb6_dim_reduction_SVD.ipynb  June22_2024_Heat_VAE_pcage.ipynb  Mar1_2024_Heat_MLP.ipynb  Mar1_2024_Heat_VAE_pcage.ipynb  feb2_2024_train.py  shapley_value_analysis_heat.ipynb  shapley_value_analysis_pm25.ipynb  train_mihm_pm25.ipynb
regnn/: __init__.py  constants.py
regnn/data/: __init__.py  base.py  dataset.py  datautils.py  debias.py  preprocess_fns.py  preprocessing.py  preprocessor_mixin.py  process.py
regnn/eval/: __init__.py  base.py  eval.py  utils.py  visualization.py
regnn/hyperparam/: hyperparam_search.py  preprocess.py  stopper.py
regnn/macroutils/: __init__.py  base.py  evaluator.py  utils.py  (+3 more)
scripts/: configs.json  train_simulated.py
tests/: test_config.py  test_dataset.py  test_index_prediction_model.py  test_mlp.py  test_mlp_ensemble.py  test_re_gnn.py  test_train.py
(+71 files in other folders)
