[project]
name = "regnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "pandas",
    "artemis",
    "scikit-learn",
    "numpy",
    "stata-setup",
    "ray",
    "alibi",
    "matplotlib",
    "pytest",
    "shap>=0.46.0",
    "pystata>=0.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["regnn"]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black"]
